<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="5dp"
        android:fontFamily="cursive"
        android:text="@string/Meteo"
        android:textColor="@color/black"
        android:textSize="25dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">


        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="55dp"
                android:layout_weight="0.5"
                android:fontFamily="cursive"
                android:text="@string/Date"
                android:textColor="@color/teal_700"
                android:textSize="25dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="110dp"
                android:layout_weight="0.5"
                android:fontFamily="cursive"
                android:text="@string/Heure"
                android:textColor="@color/teal_700"
                android:textSize="25dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="72dp"
                android:layout_weight="0.5"
                android:fontFamily="cursive"
                android:text="@string/Temp"
                android:textColor="@color/teal_700"
                android:textSize="25dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="20dp"
                android:layout_weight="0.5"
                android:fontFamily="cursive"
                android:text="@string/Vent"
                android:textColor="@color/teal_700"
                android:textSize="25dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="20dp"
                android:layout_weight="0.5"
                android:fontFamily="cursive"
                android:text="@string/Ciel"
                android:textColor="@color/teal_700"
                android:textSize="25dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <DatePicker

                android:layout_width="match_parent"
                android:layout_height="140dp"
                android:calendarViewShown="false"
                android:datePickerMode="spinner">

            </DatePicker>

            <TimePicker
                android:layout_width="match_parent"
                android:layout_height="140dp"
                android:timePickerMode="spinner"
                >

            </TimePicker>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/Temp1" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:hint="@string/Vent1" />

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:entries="@array/etat_ciel_array" />


        </LinearLayout>

    </LinearLayout>
</LinearLayout>






