<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:text="@string/Meteo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="cursive"
        android:textSize="25dp"
        android:textColor="@color/black"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="100dp"/>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">


            <TextView
                android:text="@string/Date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:fontFamily="cursive"
                android:textSize="25dp"
                android:textColor="@color/teal_700"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="5dp"
                />
            <TextView
                android:text="@string/Heure"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:fontFamily="cursive"
                android:textSize="25dp"
                android:textColor="@color/teal_700"
                android:layout_marginTop="170dp"
                android:layout_marginLeft="5dp"/>
            <TextView
                android:text="@string/Temp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:fontFamily="cursive"
                android:textSize="25dp"
                android:textColor="@color/teal_700"
                android:layout_marginTop="180dp"
                android:layout_marginLeft="5dp"/>
            <TextView
                android:text="@string/Vent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:fontFamily="cursive"
                android:textSize="25dp"
                android:textColor="@color/teal_700"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="5dp"/>
            <TextView
                android:text="@string/Ciel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:fontFamily="cursive"
                android:textSize="25dp"
                android:textColor="@color/teal_700"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="5dp"/>

        </LinearLayout>
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <DatePicker
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Hide"
                >

            </DatePicker>

            <TimePicker
                android:layout_width="wrap_content"
                android:layout_height="350dp">

            </TimePicker>
            <EditText
                android:hint="@string/Temp1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"/>

            <EditText
                android:hint="@string/Vent1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"/>
            <Spinner
                android:id="@+id/spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                />

        </LinearLayout>

    </LinearLayout>
</LinearLayout>


    public class MainActivity extends AppCompatActivity implements AdapterView.OnItemSelectedListener {

    @Override
    protected void onCreate(Bundle savedInstanceState) {
    super.onCreate(savedInstanceState);


    setContentView(R.layout.meteo);

        Spinner spinner = (Spinner) findViewById(R.id.spinner);
        // Create an ArrayAdapter using the string array and a default spinner layout
        ArrayAdapter<CharSequence> adapter = ArrayAdapter.createFromResource(this,
                R.array.etat_ciel_array, android.R.layout.simple_spinner_item);
        // Specify the layout to use when the list of choices appears
        adapter.setDropDownViewResource(android.R.layout.simple_spinner_dropdown_item);
        // Apply the adapter to the spinner
        spinner.setAdapter(adapter);

        spinner.setOnItemSelectedListener(this);

    }





    @Override
    public void onItemSelected(AdapterView<?> parent, View view, int position, long id) {
    }

    @Override
    public void onNothingSelected(AdapterView<?> parent) {

    }



}